<!--
  ~ Copyright (c) 2016 Daniel Campodonico; Emiliano Gioria; Lucas Moretti.
  ~ This file is part of Lab02.
  ~
  ~ Lab02 is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Lab02 is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Lab02.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Lab02</string>
    <string name="titulo">Pedite la cena!!!</string>
    <string name="btn_delivery">DELIVERY</string>
    <string name="btn_reservar">RESERVAR MESA</string>
    <string name="textView_horario">Seleccione el horario</string>
    <string name="switch_notificacion">Notificar Reserva 1 hora antes</string>
    <string name="radioBtn_plato">Plato</string>
    <string name="radioBtn_postre">Postre</string>
    <string name="radioBtn_bebida">Bebida</string>
    <string name="btn_agregar">AGREGAR</string>
    <string name="btn_confirmar">CONFIRMAR PEDIDO</string>
    <string name="btn_reiniciar">REINICIAR</string>
    <string name="total">Total %.2f</string>
    <string name="toast_seleccion_vacia">Debe seleccionar algo del menú</string>
    <string name="toast_pedido_ya_confirmado">El pedido ya ha sido confirmado</string>
    <string name="toast_pedido_vacio">Debe realizar su pedido antes de confirmar</string>
</resources>
